gobmkida/c2/do_owl_analyze_semeai
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:763:7: error: conflicting types for 'do_owl_analyze_semeai'
void  do_owl_analyze_semeai( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:194:13: note: previous declaration is here
static void do_owl_analyze_semeai(int apos, int bpos, 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1104:62: error: too few arguments to function call, expected 8, have 7
owl_determine_life( v22, v23, 1, does_attack, &dest, 0LL, 0LL); 
~~~~~~~~~~~~~~~~~~                                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:159:1: note: 'owl_determine_life' declared here
static void owl_determine_life(struct local_owl_data *owl,
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1114:106: error: too few arguments to function call, expected 8, have 7
owl_determine_life( *( struct local_owl_data **)&v135.same_dragon, owl, 1, callback_data, &v135, 0LL, 0LL); 
~~~~~~~~~~~~~~~~~~                                                                                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:159:1: note: 'owl_determine_life' declared here
static void owl_determine_life(struct local_owl_data *owl,
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1299:8: error: use of undeclared identifier 'byte_9B389F'
if ( ( byte_9B389F[v40] == 3 || !*( _BYTE *)( *( _QWORD *)&v135.same_dragon + v44)) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1300:6: error: use of undeclared identifier 'byte_9B388C'
&& ( byte_9B388C[v40] == 3 || !*( _BYTE *)( *( _QWORD *)&v135.same_dragon + v40 - 20)) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1310:4: error: use of undeclared identifier 'byte_9B388C'
|| byte_9B388C[v40] != 3 && v43->goal[v40 - 20] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1352:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[v51] != 3 && *( _BYTE *)( *( _QWORD *)&v135.same_dragon + v57) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1353:4: error: use of undeclared identifier 'byte_9B388C'
|| byte_9B388C[v51] != 3 && *( _BYTE *)( *( _QWORD *)&v135.same_dragon + v51 - 20) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1361:6: error: use of undeclared identifier 'byte_9B388C'
&& ( byte_9B388C[v51] == 3 || !v55->goal[v51 - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1388:4: error: use of undeclared identifier 'byte_9B389F'
|| byte_9B389F[v58] != 3 && owl->goal[v58 - 1] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1389:4: error: use of undeclared identifier 'byte_9B388C'
|| byte_9B388C[v58] != 3 && owl->goal[v58 - 20] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1421:8: error: use of undeclared identifier 'byte_9B389F'
if ( ( byte_9B389F[v64] == 3 || !*( _BYTE *)( *( _QWORD *)&v135.same_dragon + v67)) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1422:6: error: use of undeclared identifier 'byte_9B388C'
&& ( byte_9B388C[v64] == 3 || !*( _BYTE *)( *( _QWORD *)&v135.same_dragon + v64 - 20)) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1432:4: error: use of undeclared identifier 'byte_9B388C'
|| byte_9B388C[v64] != 3 && v66->goal[v64 - 20] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1470:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[v74] != 3 && *( _BYTE *)( *( _QWORD *)&v135.same_dragon + v77) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1471:4: error: use of undeclared identifier 'byte_9B388C'
|| byte_9B388C[v74] != 3 && *( _BYTE *)( *( _QWORD *)&v135.same_dragon + v74 - 20) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1479:6: error: use of undeclared identifier 'byte_9B388C'
&& ( byte_9B388C[v74] == 3 || !v76->goal[v74 - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1508:4: error: use of undeclared identifier 'byte_9B389F'
|| byte_9B389F[v74] != 3 && owl->goal[v74 - 1] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/engine/owl.c:1509:4: error: use of undeclared identifier 'byte_9B388C'
|| byte_9B388C[v74] != 3 && owl->goal[v74 - 20] 
   ^
19 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_analyze_semeai/src/obj/1/owl.o] Error 1
